# ecommerce-custom-service-optimization

./: README.md  phase_1.md  phase_2.md
app/: .gitignore  README.md  color_print.py  ejemplo_salida.md  ejemplo_salida.txt  main.py  pedidos.txt  pyproject.toml
app/src/utils/: chroma_db.py  text_preprocessor.py
