[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=0.3.27",
    "langchain-azure-ai>=0.1.4",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "pypdf>=6.1.1",
    "python-dotenv>=1.0.0",
]
